# advent-of-code

./: README.md  README_template.md
2025/: README.md
2025/day01/: CMakeLists.txt  README.md  solution.cpp
2025/day02/: README.md  solution.cpp
2025/day03/: README.md  solution.cpp  solution.txt
2025/day04/: CMakeLists.txt  README.md  solution.cpp
2025/day05/: README.md  solution.cpp
2025/day06/: README.md  solution.cpp
2025/day07/: README.md  solution.cpp
2025/day08/: README.md  solution.cpp
2025/day09/: README.md  solution.cpp
2025/day10/: README.md  solution.cpp
templates/: CMakeLists.txt
